news list component added with styling

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Francois+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Source+Code+Pro:wght@200&display=swap');
 
 
 
@@ -6,7 +7,7 @@
   text-align: center;
   display: flex;
   flex-direction: column;
-  background-color: #ffff8b;
+  background-color: #ffee58;
 }
 
 
@@ -43,7 +44,6 @@
   height: 100%;
   font-size: 2em;
   color: #3f1dcb;
-  border-bottom: 1px solid #c9bc1f;
   
 }
 
@@ -115,6 +115,70 @@
   }
 
   .news-container {
-    width: 60%;
-    border: 2px solid red;
+    width: 70%;
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 1em;
+    
+    
+  }
+
+  .news-card-container {
+    margin: .2em 0;
+    color: white;
+    background-color: black;
+    width: 80%;
+    border: 4px solid black;
+    display: flex;
+    border-radius: 20px;
+    transition: background-color 0.3s linear;
+
+    /* box-shadow:
+    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+    0 12.5px 10px rgba(0, 0, 0, 0.06),
+    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+    0 100px 80px rgba(0, 0, 0, 0.12) */
+
+  
+
+  }
+
+  .news-card-container:hover {
+    background-color: #c9bc1f;
+  }
+
+
+  .news-card-article-info {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    
+    
+  }
+
+  .article-heading {
+    font-family: 'Permanent Marker', cursive;
+    font-size: 2rem;
+   
+   
+    
+  }
+
+  .article-image {
+    height:100px;
+    width: 150px;
+    object-fit: scale-down;
+    border-radius: 15%;
+    margin-left: .5em;
+    margin-right: .5em;
+    
+  }
+
+  .page-title {
+    margin-right: auto;
   }
