--- a/src/App.css
+++ b/src/App.css
@@ -128,27 +128,27 @@
   .news-card-container {
     margin: .2em 0;
     color: white;
-    background-color: black;
+    background-color: rgb(148, 129, 218);
     width: 80%;
     border: 4px solid black;
     display: flex;
     border-radius: 20px;
     transition: background-color 0.3s linear;
 
-    /* box-shadow:
+    box-shadow:
     0 2.8px 2.2px rgba(0, 0, 0, 0.034),
     0 6.7px 5.3px rgba(0, 0, 0, 0.048),
     0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072),
     0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12) */
+    0 100px 80px rgba(0, 0, 0, 0.12)
 
   
 
   }
 
   .news-card-container:hover {
-    background-color: #c9bc1f;
+    background-color: #be69f0;
   }
 
 
