--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Francois+One&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Source+Code+Pro:wght@200&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Newsreader&display=swap');
 
 
 
-
+body {
+  background-color:#fafafa;
+}
 .App {
   text-align: center;
   display: flex;
   flex-direction: column;
-  background-color: #ffee58;
+
 }
 
 
@@ -22,7 +24,12 @@
   line-height: 30px;
   font-weight: bold;
   padding-bottom: .5em;
-  background-color: #ffee58;
+  top: 0; 
+  position: fixed;
+  width: 100%;
+  background-color: #fafafa;
+  border-bottom: 1px solid #3f1dcb;
+ 
   
  
 
@@ -40,7 +47,7 @@
 .nav-bar-container .nav-bar-search {
   
   border: 0px;
-  background-color: #ffee58;
+  background-color: #fafafa;
   width: 20em;
   height: 100%;
   font-size: 2em;
@@ -87,17 +94,18 @@
 .body-div {
   display: flex;
   flex-direction: row;
-  height: 100vh;
+  
 }
 
 .side-nav-bar-container {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  background-color: #ffee58;
   text-align: left;
   padding: 2rem;
   transition: transform 0.3s ease-in-out;
+  margin-top: 70px;
+  position: fixed;
   
 }
 
@@ -117,62 +125,61 @@
   }
 
   .news-container {
-    width: 70%;
+    width: 80%;
     
     display: flex;
     flex-direction: column;
     align-items: center;
     padding-top: 1em;
+    margin-left: 25em;
+    margin-top: 5em;
+
     
     
   }
 
   .news-card-container {
     margin: .2em 0;
-    color: white;
-    background-color: rgb(148, 129, 218);
+    background-color:#fafafa;
     width: 80%;
-    border: 4px solid black;
+    border: 2px solid black;
     display: flex;
     border-radius: 20px;
     transition: background-color 0.3s linear;
+    margin-bottom: 2em;
+    padding: 1em;
 
-    box-shadow:
-    0 2.8px 2.2px rgba(0, 0, 0, 0.034),
-    0 6.7px 5.3px rgba(0, 0, 0, 0.048),
-    0 12.5px 10px rgba(0, 0, 0, 0.06),
-    0 22.3px 17.9px rgba(0, 0, 0, 0.072),
-    0 41.8px 33.4px rgba(0, 0, 0, 0.086),
-    0 100px 80px rgba(0, 0, 0, 0.12)
+
 
   
 
   }
 
-  .news-card-container:hover {
-    background-color: #be69f0;
-  }
-
+  
 
   .news-card-article-info {
     width: 100%;
     display: flex;
-    align-items: center;
+    
     flex-direction: column;
+    text-align: left;
+    color: #3f1dcb;
     
     
   }
 
   .article-heading {
-    font-family: 'Permanent Marker', cursive;
+    color:#3f1dcb;
     font-size: 2rem;
+    font-family: 'Newsreader', serif;
+    
    
    
     
   }
 
   .article-image {
-    height:100px;
+    height:120px;
     width: 150px;
     object-fit: scale-down;
     border-radius: 15%;
@@ -181,9 +188,7 @@
     
   }
 
-  .page-title {
-    margin-right: auto;
-  }
+  
 
   .active-link {
     color: #be69f0;
